[project]
name = "langchaintest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "defusedxml>=0.7.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "grandalf>=0.8",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.27",
    "langchain-redis>=0.2.3",
    "langchain-unstructured>=0.1.5",
    "langsmith>=0.4.4",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "pypdf>=5.8.0",
    "redis>=6.2.0",
    "unstructured>=0.18.7",
]
